skr_mini_e3:  Add support for button on PA2

--- a/bootloader/F1/Makefile
+++ b/bootloader/F1/Makefile
@@ -6,7 +6,7 @@ VECTOR_TABLE_OFFSET = 0x0000
 
 # The default Flash Page size (Sector size) for LOW and MEDIUM STM32F103 devices is 1024 bytes
 # High Density STM32F103 devices have 2 kB Flash Page size  
-PAGE_SIZE = 1024 
+PAGE_SIZE = 1024
 
 C_SRCS = Src/main.c Src/usb.c Src/hid.c Src/led.c Src/flash.c
 
@@ -84,6 +84,7 @@ generic-pb0: $(SRCS) clean gccversion build_generic-pb0 copy_generic-pb0 info si
 generic-pb12: $(SRCS) clean gccversion build_generic-pb12 copy_generic-pb12 info size
 mini-stm32v3: $(SRCS) clean gccversion build_mini-stm32v3 copy_mini-stm32v3 info size
 btt-skr-mini-e3: $(SRCS) clean gccversion build_btt-skr-mini-e3 copy_btt-skr-mini-e3 info size
+btt-skr-mini-e3_no-btn: $(SRCS) clean gccversion build_btt-skr-mini-e3_no-btn copy_btt-skr-mini-e3_no-btn info size
 
 build_maple-mini: TARGETFLAGS= -DTARGET_MAPLE_MINI
 build_maple-mini: LINKER_SCRIPT=STM32F103C8T6.ld
@@ -182,6 +183,13 @@ build_btt-skr-mini-e3 : $(BUILD_DIR)/$(TARGET).elf $(BUILD_DIR)/$(TARGET).bin
 copy_btt-skr-mini-e3: $(BIN_DIR)
 	$(ECHO) "COPY    $(BIN_DIR)/hid_btt_skr_mini_e3.bin"
 	$(Q)$(CP) $(BUILD_DIR)/$(TARGET).bin $(BIN_DIR)/hid_btt_skr_mini_e3.bin
+
+build_btt-skr-mini-e3_no-btn : TARGETFLAGS= -DTARGET_BTT_SKR_MINI_E3_NO_BTN
+build_btt-skr-mini-e3_no-btn : LINKER_SCRIPT=STM32F103C8T6.ld
+build_btt-skr-mini-e3_no-btn : $(BUILD_DIR)/$(TARGET).elf $(BUILD_DIR)/$(TARGET).bin
+copy_btt-skr-mini-e3_no-btn: $(BIN_DIR)
+	$(ECHO) "COPY    $(BIN_DIR)/hid_btt_skr_mini_e3_no_btn.bin"
+	$(Q)$(CP) $(BUILD_DIR)/$(TARGET).bin $(BIN_DIR)/hid_btt_skr_mini_e3_no_btn.bin
 
 $(BUILD_DIR)/$(TARGET).elf: $(OBJS)
 	$(ECHO) "LD      $@"
